...
                    .fillMaxWidth()
                    .padding(bottom = Spacing.lg)
            )

            val listState = rememberLazyListState()
            val reorderableState = rememberReorderableLazyListState(listState) { from, to ->
                val list = reorderableWidgets.toMutableList()
                val item = list.removeAt(from.index)
                list.add(to.index, item)
                reorderableWidgets = list
                
                // Notify parent to save (debounced)
                onReorder(list.map { it.widget })
...
